ajustes-home-responsive

--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -32,6 +32,10 @@
   color: $primary-color;
   margin-bottom: 35px;
   text-transform: capitalize;
+
+  @include responsive('mobile-h') {
+    font-size: 42px
+  }
 }
 
 @mixin subtitle() {
