--- a/wp-content/themes/miradas/scss/footer/_base.scss
+++ b/wp-content/themes/miradas/scss/footer/_base.scss
@@ -27,6 +27,7 @@
       width: 280px;
       @include responsive('desktop-s') {
         width: 180px;
+        text-align: center;
       }
     }
   }
