--- a/wp-content/themes/miradas/scss/blocks/_image_with_text.scss
+++ b/wp-content/themes/miradas/scss/blocks/_image_with_text.scss
@@ -6,7 +6,7 @@
     }
 
     &__cont {
-       /*  display: grid;
+        /*  display: grid;
         grid-template-columns: repeat(2, 1fr); */
         display: flex;
         justify-content: flex-start;
@@ -15,21 +15,22 @@
         margin: 60px 0 30px 0;
 
         @include responsive('tablet-h') {
+            flex-direction: column;
             grid-gap: 30px;
         }
 
         @include responsive('mobile-h') {
-            flex-direction: column;
             grid-gap: 20px;
             margin: 30px 0 15px 0;
         }
 
-        &--revert { //TODO: clase apra el del medio ponerlo al reves. Habria que hacer  un repeater? para este bloque?
+        &--revert { 
             text-align: right;
             flex-direction: row-reverse;
 
             @include responsive ('tablet-h') {
-                flex-direction: column-reverse;
+                flex-direction: column;
+                text-align: left;
             }
         }
     }
@@ -39,10 +40,6 @@
         max-width: 100%;
 
         @include responsive ('tablet-h') {
-            width: 450px;
-        }
-
-        @include responsive ('mobile-h') {
             width: 100%;
         }
     }
@@ -70,13 +67,18 @@
         max-width: 100%;
         aspect-ratio: 1;
 
-        @include responsive ('mobile-h') {
+        @include responsive ('tablet-h') {
             width: 100%;
+            aspect-ratio: 1.78;
         }
 
         img {
             object-fit: cover;
             aspect-ratio: 1;
+
+            @include responsive ('tablet-h') {
+                aspect-ratio: 1.78;
+            }
         }
     }
 }
