--- a/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
+++ b/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
@@ -74,7 +74,7 @@
             }
 
             @include responsive ('tablet-h') {
-                padding-left: 25px;
+                padding-left: 0;
             }
 
             &::before {
@@ -83,6 +83,10 @@
                 @include responsive ('desktop-s') {
                     //top: 130%;
                     left: 0px;
+                }
+
+                @include responsive ('mobile-h') {
+                    display: none;
                 }
 
             }
