--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -53,7 +53,8 @@ Text Domain: twentysixteen
   'blocks/_video',
   'blocks/_que_ofrecemos',
   'blocks/_image_with_text',
-  'blocks/_nuestro_equipo';
+  'blocks/_nuestro_equipo',
+  'blocks/_contacto'; 
 
   // Posts
   @import
