--- a/wp-content/themes/miradas/scss/blocks/_video.scss
+++ b/wp-content/themes/miradas/scss/blocks/_video.scss
@@ -66,7 +66,7 @@
         font-weight: 700; 
         padding: 5px 10px 4px; 
         cursor: pointer;
-        background: red;
+        background: transparent;
         @include responsive('mobile-h') {
             font-size: 10px;
             font-weight: 600;
@@ -75,6 +75,10 @@
         }
         &:hover {
               background: #000;
+        }
+
+        img {
+          width: 45px;
         }
     }
   }
