--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -455,11 +455,10 @@ strong * {
 .item img {
   -o-object-fit: cover;
      object-fit: cover;
-  max-height: 250px;
+  max-height: 200px;
 }
 
 .popup {
-  display: none;
   display: none;
   position: fixed;
   z-index: 100;
@@ -475,17 +474,6 @@ strong * {
   -webkit-box-shadow: 9px 10px 48px 0px rgba(0, 0, 0, 0.75);
           box-shadow: 9px 10px 48px 0px rgba(0, 0, 0, 0.75);
   z-index: 101;
-  /* &::before {
-    content: "";
-  display: block;
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  background: rgba(48, 35, 8, 0.8);
-  width: 100%;
-  height: 100%;
-  } */
 }
 .popup .close_popup {
   position: absolute;
@@ -713,6 +701,10 @@ strong * {
   .vision__title {
     font-size: 30px;
   }
+}
+
+.wrapper {
+  overflow: hidden;
 }
 
 .site-logo {
@@ -2608,7 +2600,7 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
 
 .popup_equipo {
   position: fixed;
-  background: white;
+  background: #ffffff;
   width: 1520px;
   max-width: 90%;
   right: 0;
@@ -2622,6 +2614,8 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
   transition: all 0.3s ease;
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
+  margin-top: 3%;
+  border-radius: 50px 0 0 0;
 }
 .popup_equipo .container {
   width: 100%;
@@ -2648,7 +2642,9 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
 .popup_equipo__cont {
   width: 100%;
   display: block;
-  padding: 150px 0;
+  padding: 100px 0;
+  z-index: 10;
+  position: relative;
 }
 @media only screen and (max-width: 600px) {
   .popup_equipo__cont {
@@ -2657,8 +2653,20 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
 }
 .popup_equipo__cont__title {
   color: #282570;
-  font-size: 60px;
+  font-size: 45px;
+  font-family: "Rosario", sans-serif;
   font-weight: 700;
+  padding: 20px 0;
+}
+@media only screen and (max-width: 1050px) {
+  .popup_equipo__cont__title {
+    font-size: 40px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .popup_equipo__cont__title {
+    font-size: 30px;
+  }
 }
 .popup_equipo__cont__text {
   font-size: 22px;
@@ -2672,6 +2680,9 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
     margin: 30 px 0 20px 0;
   }
 }
+.popup_equipo__cont img {
+  border-radius: 50%;
+}
 
 .close_popup {
   position: fixed;
@@ -2680,7 +2691,7 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
   width: 46px;
   height: 46px;
   background: rgb(255, 255, 255) url(images/close-form.svg) center no-repeat;
-  background-size: 22px auto;
+  background-size: 40px auto;
   cursor: pointer;
   -webkit-transform: translateX(200px);
           transform: translateX(200px);
@@ -3004,6 +3015,7 @@ body.js-popup-active .close_popup {
           column-gap: 10px;
   outline: 2px solid #F9CEEA;
   outline-offset: 10px;
+  border-radius: 1px;
 }
 @media only screen and (max-width: 1050px) {
   .notas_de_interes__item {
@@ -3022,18 +3034,19 @@ body.js-popup-active .close_popup {
   }
 }
 .notas_de_interes__title {
-  font-size: 30px;
+  font-size: 20px;
   font-family: "Rosario", sans-serif;
   margin-bottom: 20px;
+  font-weight: 700;
 }
 @media only screen and (max-width: 1050px) {
   .notas_de_interes__title {
-    font-size: 26px;
+    font-size: 16px;
   }
 }
 @media only screen and (max-width: 600px) {
   .notas_de_interes__title {
-    font-size: 24px;
+    font-size: 16px;
   }
 }
 .notas_de_interes__description {
@@ -3129,7 +3142,7 @@ body.js-popup-active .close_popup {
   font-weight: 700;
   padding: 5px 10px 4px;
   cursor: pointer;
-  background: red;
+  background: transparent;
 }
 @media only screen and (max-width: 750px) {
   .video .controls .video-controls {
@@ -3141,6 +3154,9 @@ body.js-popup-active .close_popup {
 }
 .video .controls .video-controls:hover {
   background: #000;
+}
+.video .controls .video-controls img {
+  width: 45px;
 }
 .video .play-button {
   cursor: pointer;
@@ -3673,6 +3689,181 @@ body.js-popup-active .close_popup {
 .nuestro_equipo--home img {
   width: 150px;
   max-width: 100%;
+}
+
+.contacto {
+  padding: 100px 0;
+}
+@media only screen and (max-width: 750px) {
+  .contacto {
+    padding: 40px 0;
+  }
+}
+.contacto__cont {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 40px 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 40px;
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.contacto__cont h1, .contacto__cont h2, .contacto__cont h3, .contacto__cont h4, .contacto__cont h5, .contacto__cont h6 {
+  margin-bottom: 20px;
+}
+.contacto__cont h1 {
+  font-size: 55px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont h1 {
+    font-size: 45px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont h1 {
+    font-size: 40px;
+  }
+}
+.contacto__cont h2 {
+  font-size: 45px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont h2 {
+    font-size: 40px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont h2 {
+    font-size: 30px;
+  }
+}
+.contacto__cont h3 {
+  font-size: 36px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont h3 {
+    font-size: 28px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont h3 {
+    font-size: 28px;
+  }
+}
+.contacto__cont h4 {
+  font-size: 30px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont h4 {
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont h4 {
+    font-size: 24px;
+  }
+}
+.contacto__cont h5 {
+  font-size: 20px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont h5 {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont h5 {
+    font-size: 16px;
+  }
+}
+.contacto__cont h6 {
+  font-size: 16px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont h6 {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont h6 {
+    font-size: 16px;
+  }
+}
+.contacto__cont p {
+  font-size: 20px;
+  line-height: 1.8;
+  margin: 20px 0;
+}
+@media only screen and (max-width: 750px) {
+  .contacto__cont p {
+    font-size: 16px;
+  }
+}
+.contacto__cont .wp-video {
+  padding: 20px 0;
+}
+.contacto__cont ul, .contacto__cont ol {
+  padding-left: 15px;
+  margin-bottom: 28px;
+  line-height: 1.6;
+}
+.contacto__cont ul li {
+  list-style: disc;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+.contacto__cont a {
+  color: #282570;
+}
+.contacto__cont a:hover {
+  text-decoration: underline;
+}
+.contacto__cont blockquote {
+  padding-left: 30px;
+  border-left: 3px solid #282570;
+}
+.contacto__cont blockquote p {
+  font-size: 30px;
+  font-family: "Rosario", sans-serif;
+}
+@media only screen and (max-width: 1050px) {
+  .contacto__cont blockquote p {
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contacto__cont blockquote p {
+    font-size: 24px;
+  }
+}
+.contacto__cont .alignleft {
+  float: left;
+  margin-right: 30px;
+}
+.contacto__cont .aligncenter {
+  margin: 30px auto;
+  display: block;
+}
+.contacto__cont .alignright {
+  float: right;
+  margin-left: 30px;
+}
+.contacto__date__title {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: left;
+  text-transform: capitalize;
+  margin-bottom: 30px;
+}
+.contacto ul li {
+  font-size: 25px;
 }
 
 .single_post {
