--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -642,7 +642,7 @@ strong * {
   line-height: 1.6;
 }
 .vision__cont ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
@@ -1567,7 +1567,7 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
   line-height: 1.6;
 }
 .single-content__cont ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
@@ -2302,7 +2302,7 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
   line-height: 1.6;
 }
 .text_block__cont ul li, .quienes_somos__cont ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
@@ -2614,7 +2614,7 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
   transition: all 0.3s ease;
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
-  margin-top: 3%;
+  margin-top: 2%;
   border-radius: 50px 0 0 0;
 }
 .popup_equipo .container {
@@ -2675,6 +2675,12 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
   margin: 32px 0 45px 0;
   line-height: 32px;
 }
+@media only screen and (max-width: 750px) {
+  .popup_equipo__cont__text {
+    width: 100%;
+    font-size: 18px;
+  }
+}
 @media only screen and (max-width: 600px) {
   .popup_equipo__cont__text {
     margin: 30 px 0 20px 0;
@@ -2682,6 +2688,10 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
 }
 .popup_equipo__cont img {
   border-radius: 50%;
+}
+.popup_equipo__cont__especializacion p {
+  font-weight: 700;
+  text-align: left;
 }
 
 .close_popup {
@@ -2711,18 +2721,19 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
 }
 .close_popup::before {
   content: "";
-  width: 43px;
-  height: 43px;
-  border: 2px solid #000;
+  width: 53px;
+  height: 53px;
   border-radius: 50%;
   position: absolute;
   top: 0px;
   right: 0px;
 }
 .close_popup:hover {
-  background-color: #000;
+  background-color: #FBD9D0;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
+  background: rgb(255, 255, 255) url(images/close-form-color.svg) center no-repeat;
+  background-size: 40px auto;
 }
 
 body.js-popup-active .close_popup {
@@ -2907,7 +2918,7 @@ body.js-popup-active .close_popup {
   line-height: 1.6;
 }
 .contact__text ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
@@ -3153,7 +3164,8 @@ body.js-popup-active .close_popup {
   }
 }
 .video .controls .video-controls:hover {
-  background: #000;
+  background: transparent;
+  opacity: 0.6;
 }
 .video .controls .video-controls img {
   width: 45px;
@@ -3536,7 +3548,7 @@ body.js-popup-active .close_popup {
   line-height: 1.6;
 }
 .nuestro_equipo__subtitle ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
@@ -3815,7 +3827,7 @@ body.js-popup-active .close_popup {
   line-height: 1.6;
 }
 .contacto__cont ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
@@ -3855,15 +3867,24 @@ body.js-popup-active .close_popup {
   float: right;
   margin-left: 30px;
 }
+@media only screen and (max-width: 1050px) {
+  .contacto__cont {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 .contacto__date__title {
   font-size: 40px;
   font-weight: 700;
   text-align: left;
-  text-transform: capitalize;
+  text-transform: uppercase;
   margin-bottom: 30px;
+  color: #282570;
+  font-family: "Merriweather", serif;
 }
 .contacto ul li {
   font-size: 25px;
+  font-weight: 400;
 }
 
 .single_post {
@@ -3978,7 +3999,7 @@ body.js-popup-active .close_popup {
   line-height: 1.6;
 }
 .single_post__text ul li {
-  list-style: disc;
+  list-style: none;
   margin-bottom: 15px;
   font-size: 20px;
 }
