--- a/wp-content/themes/miradas/scss/blocks/_contacto.scss
+++ b/wp-content/themes/miradas/scss/blocks/_contacto.scss
@@ -9,17 +9,24 @@
     max-width: 100%;
     margin: 0 auto;
     @include text_block();
+
+    @include responsive ('tablet-h') {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__date__title {
     font-size: 40px;
     font-weight: 700;
     text-align: left;
-    text-transform: capitalize; 
+    text-transform: uppercase; 
     margin-bottom: 30px;
+    color: $primary-color;
+    font-family: $third-font;
   }
 
   ul li {
     font-size: 25px; 
+    font-weight: 400;
   }
 } 
