--- a/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_popup_equipo.scss
@@ -21,7 +21,7 @@
     opacity: 0;
     transition: all .3s ease;
     transition-delay: 0s;
-    margin-top: 3%;
+    margin-top: 2%;
     border-radius: 50px 0 0 0;
 
     .container {
@@ -72,7 +72,7 @@
             margin: 32px 0 45px 0;
             line-height: 32px;
 
-            @include responsive('mobile-c') {
+            @include responsive('mobile-h') {
                 width: 100%;
                 font-size: 18px;
             }
@@ -84,6 +84,11 @@
 
         img {
             border-radius: 50%;
+        }
+
+        &__especializacion p {
+            font-weight: 700;
+            text-align: left;
         }
     }
 }
@@ -109,20 +114,22 @@
         right: 16px;
     }
 
-  &::before {
-    content: '';
-    width: 43px;
-    height: 43px;
-    border: 2px solid $black;
-    border-radius: 50%;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-  }
-  &:hover {
-      background-color: $black;
-      transition:all .2s ease;
-  }
+    &::before {
+        content: '';
+        width: 53px;
+        height: 53px;
+        //border: 2px solid $black;
+        border-radius: 50%;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    } 
+    &:hover {
+        background-color: $pink;
+        transition:all .2s ease;
+        background: rgba(255,255,255,1) url(images/close-form-color.svg) center no-repeat;
+        background-size: 40px auto;
+    }
 }
 body.js-popup-active {
     .close_popup {opacity:1;transform: translateX(0px);transition-delay: 0.2s;}
