--- a/wp-content/themes/miradas/scss/blocks/_video.scss
+++ b/wp-content/themes/miradas/scss/blocks/_video.scss
@@ -74,7 +74,8 @@
             right: 15px;
         }
         &:hover {
-              background: #000;
+              background: transparent;
+              opacity: 0.6;
         }
 
         img {
