--- a/wp-content/themes/miradas/scss/hero/_home.scss
+++ b/wp-content/themes/miradas/scss/hero/_home.scss
@@ -57,4 +57,9 @@
         z-index: 10;
         text-transform: capitalize;
     }
+
+    &__image {
+        aspect-ratio: 2;
+        display: block;
+    }
 }
