--- a/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
+++ b/wp-content/themes/miradas/scss/blocks/_que_ofrecemos.scss
@@ -101,5 +101,10 @@
     @include responsive ('desktop-s') {
       font-size: 28px;
     }
+
+    @include responsive ('mobile-h') {
+      font-size: 16px;
+      margin-top: 20px;
+    }
   }
 }
