--- a/wp-content/themes/miradas/scss/hero/_home.scss
+++ b/wp-content/themes/miradas/scss/hero/_home.scss
@@ -7,10 +7,17 @@
         min-height: 70vw;
     } */
 
-    video {
-        width: 100%;
+    &__video {
+        aspect-ratio: 2.12;
+        position: relative;
         display: block;
+
+        video {
+            width: 100%;
+            display: block;
+        }
     }
+
 
     &::before {
         @include overlay();
@@ -19,7 +26,7 @@
     &__content {
         position: absolute;
         top: 50%;
-        transform: translate(50%, -25%);
+        transform: translate(50%, -50%);
         right: 50%;
         z-index: 4;
         width: 100%;
